--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.3.0",
+    "grunt-contrib-imagemin": "~0.7.0",
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
@@ -35,7 +35,8 @@
     "karma-firefox-launcher": "~0.1.3",
     "karma-safari-launcher": "~0.1.1",
     "karma-jasmine": "~0.1.5",
-    "karma-coffee-preprocessor": "~0.2.1"
+    "karma-coffee-preprocessor": "~0.2.1",
+    "grunt-contrib-jade": "~0.11.0"
   },
   "engines": {
     "node": ">=0.10.0"
